customer-service/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-customer-proxy
  labels:
    app: envoy-customer 
spec:
  ports:
  - port: 10000
    protocol: TCP
  selector:
    app: envoy-customer
